// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with levels @500px 1`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem test"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              test
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2020
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(270.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2019
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(135.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2018
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2017
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Andel
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,189.59090909090915)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                70 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,158.0757575757576)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                75 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,126.56060606060603)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                80 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,95.04545454545458)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                85 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,63.53030303030302)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                90 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,32.01515151515156)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                95 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,0.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                100 %
              </text>
            </g>
          </g>
          <g
            class="levels"
          >
            <rect
              class="level"
              data-testid="level-high"
              fill="#3baa34"
              height="63.030303030303"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
            <rect
              class="level"
              data-testid="level-mid"
              fill="#fd9c00"
              height="144.969696969697"
              opacity="0.2"
              width="405"
              x="0"
              y="63.03030303030302"
            />
            <rect
              class="level"
              data-testid="level-low"
              fill="#e30713"
              height="0"
              opacity="0.2"
              width="405"
              x="0"
              y="208"
            />
          </g>
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M405,93.704L270,72.485L135,29.498L0,173.964"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          />
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="405"
              cy="93.70444121212122"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="270"
              cy="72.48484848484848"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="135"
              cy="29.4981818181818"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="0"
              cy="173.9636363636364"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Render with levels reversed @500px 1`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem test"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              test
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
          <g
            class="legendItem test2"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              test2
            </text>
            <line
              stroke="#90CAF9"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2020
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(270.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2019
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(135.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2018
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2017
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Antall
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,208.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,178.78571428571428)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,149.07142857142856)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,119.35714285714285)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,89.64285714285712)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,4
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,59.92857142857142)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,5
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,30.2142857142857)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,6
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,0.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,7
              </text>
            </g>
          </g>
          <g
            class="levels"
          >
            <rect
              class="level"
              data-testid="level-high"
              fill="#3baa34"
              height="59.428571428571445"
              opacity="0.2"
              width="405"
              x="0"
              y="148.57142857142856"
            />
            <rect
              class="level"
              data-testid="level-mid"
              fill="#fd9c00"
              height="59.42857142857143"
              opacity="0.2"
              width="405"
              x="0"
              y="89.14285714285712"
            />
            <rect
              class="level"
              data-testid="level-low"
              fill="#e30713"
              height="89.14285714285712"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
          </g>
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M270,163.429L135,103.049L0,171.154"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
            <path
              class="line"
              d="M270,59.429L135,49.92L0,136.686"
              fill="none"
              opacity="1"
              stroke="#90CAF9"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          >
            <path
              class="line"
              d="M405,55.464L270,163.429"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-dasharray: 10, 10; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
            <path
              class="line"
              d="M405,168.352L270,59.429"
              fill="none"
              opacity="1"
              stroke="#90CAF9"
              style="stroke-width: 3; stroke-dasharray: 10, 10; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="405"
              cy="55.463794285714286"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="270"
              cy="163.42857142857142"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="135"
              cy="103.04914285714284"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="0"
              cy="171.15428571428572"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="405"
              cy="168.35222857142855"
              fill="#90CAF9"
              opacity="1"
              r="4"
              stroke="#90CAF9"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="270"
              cy="59.42857142857142"
              fill="#90CAF9"
              opacity="1"
              r="4"
              stroke="#90CAF9"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="135"
              cy="49.91999999999997"
              fill="#90CAF9"
              opacity="1"
              r="4"
              stroke="#90CAF9"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="0"
              cy="136.68571428571428"
              fill="#90CAF9"
              opacity="1"
              r="4"
              stroke="#90CAF9"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Render with many years 1`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem Nasjonalt"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              Nasjonalt
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2015
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(101.75,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2017
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(203,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2019
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(304.25,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2021
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2023
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Antall
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,208.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,162.27777777777777)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,116.05555555555556)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,69.83333333333334)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,23.6111111111111)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,4
              </text>
            </g>
          </g>
          <g
            class="levels"
          >
            <rect
              class="level"
              data-testid="level-high"
              fill="#3baa34"
              height="92.44444444444444"
              opacity="0.2"
              width="405"
              x="0"
              y="115.55555555555556"
            />
            <rect
              class="level"
              data-testid="level-mid"
              fill="#fd9c00"
              height="92.44444444444447"
              opacity="0.2"
              width="405"
              x="0"
              y="23.1111111111111"
            />
            <rect
              class="level"
              data-testid="level-low"
              fill="#e30713"
              height="23.111111111111086"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
          </g>
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M0,64.711L50.625,60.089L101.25,55.467L151.875,50.844L202.5,46.222"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          >
            <path
              class="line"
              d="M202.5,46.222L253.125,41.6L303.75,36.978L354.375,32.356L405,27.733"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-dasharray: 10, 10; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="0"
              cy="64.71111111111111"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="50.625"
              cy="60.08888888888888"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="101.25"
              cy="55.466666666666654"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="151.875"
              cy="50.84444444444445"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="202.5"
              cy="46.22222222222224"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="253.125"
              cy="41.600000000000016"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="303.75"
              cy="36.97777777777779"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="354.375"
              cy="32.355555555555554"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="405"
              cy="27.733333333333327"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Render with many years, ending with even 1`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem Nasjonalt"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              Nasjonalt
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(45.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2014
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(135.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2016
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(225.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2018
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(315.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2020
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2022
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Antall
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,208.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,182.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,05
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,156.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,130.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,15
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,104.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,78.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,25
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,52.50000000000002)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,26.50000000000002)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,35
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,0.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,4
              </text>
            </g>
          </g>
          <g
            class="levels"
          >
            <rect
              class="level"
              data-testid="level-high"
              fill="#3baa34"
              height="104"
              opacity="0.2"
              width="405"
              x="0"
              y="104"
            />
            <rect
              class="level"
              data-testid="level-mid"
              fill="#fd9c00"
              height="104"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
            <rect
              class="level"
              data-testid="level-low"
              fill="#e30713"
              height="0"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
          </g>
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M0,46.8L45,46.8L90,46.8L135,41.6L180,36.4L225,31.2L270,26"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          >
            <path
              class="line"
              d="M270,26L315,20.8L360,15.6L405,10.4"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-dasharray: 10, 10; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="0"
              cy="46.80000000000002"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="45"
              cy="46.80000000000002"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="90"
              cy="46.80000000000002"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="135"
              cy="41.600000000000016"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="180"
              cy="36.400000000000006"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="225"
              cy="31.200000000000003"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="270"
              cy="26.00000000000002"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="315"
              cy="20.80000000000002"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="360"
              cy="15.600000000000014"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="405"
              cy="10.40000000000001"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Render with many years, including missing years 1`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem Nasjonalt"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              Nasjonalt
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2015
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(152.375,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2018
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(304.25,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2021
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2023
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Antall
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,208.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,182.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,05
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,156.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,130.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,15
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,104.49999999999997)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,78.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,25
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,52.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,26.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,35
              </text>
            </g>
          </g>
          <g
            class="levels"
          >
            <rect
              class="level"
              data-testid="level-high"
              fill="#3baa34"
              height="104.00000000000003"
              opacity="0.2"
              width="405"
              x="0"
              y="103.99999999999997"
            />
            <rect
              class="level"
              data-testid="level-mid"
              fill="#fd9c00"
              height="103.99999999999997"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
            <rect
              class="level"
              data-testid="level-low"
              fill="#e30713"
              height="0"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
          </g>
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M0,46.8L50.625,41.6L151.875,36.4"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          >
            <path
              class="line"
              d="M253.125,31.2L303.75,26L354.375,20.8L405,15.6"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-dasharray: 10, 10; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="0"
              cy="46.8"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="50.625"
              cy="41.599999999999994"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="151.875"
              cy="36.399999999999984"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="253.125"
              cy="31.19999999999998"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="303.75"
              cy="26"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="354.375"
              cy="20.799999999999997"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="405"
              cy="15.59999999999999"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Render with many years, including missing years 2`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem Nasjonalt"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              Nasjonalt
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2015
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(152.375,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2018
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(304.25,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2021
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2023
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Antall
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,208.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,182.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,05
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,156.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,130.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,15
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,104.49999999999997)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,78.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,25
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,52.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,26.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,35
              </text>
            </g>
          </g>
          <g
            class="levels"
          >
            <rect
              class="level"
              data-testid="level-high"
              fill="#3baa34"
              height="104.00000000000003"
              opacity="0.2"
              width="405"
              x="0"
              y="103.99999999999997"
            />
            <rect
              class="level"
              data-testid="level-mid"
              fill="#fd9c00"
              height="103.99999999999997"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
            <rect
              class="level"
              data-testid="level-low"
              fill="#e30713"
              height="0"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
          </g>
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M0,46.8L50.625,41.6L151.875,36.4L253.125,31.2L303.75,26L354.375,20.8"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          >
            <path
              class="line"
              d="M354.375,20.8L405,15.6"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-dasharray: 10, 10; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="0"
              cy="46.8"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="50.625"
              cy="41.599999999999994"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="151.875"
              cy="36.399999999999984"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="253.125"
              cy="31.19999999999998"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="303.75"
              cy="26"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="354.375"
              cy="20.799999999999997"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="405"
              cy="15.59999999999999"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Render without levels @250px 1`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem a"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              a
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2020
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(270.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2019
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(135.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2018
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2017
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Antall
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,208.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,173.83333333333331)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,139.16666666666666)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,104.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,69.83333333333331)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,4
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,35.16666666666666)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,5
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,0.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,6
              </text>
            </g>
          </g>
          <g
            class="levels"
          />
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M405,34.667L270,156L135,104L0,173.333"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          />
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="405"
              cy="34.66666666666666"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="270"
              cy="156"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="135"
              cy="104"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="0"
              cy="173.33333333333331"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
